Bug 1379628 - Ensure pixels for Android dynamic toolbar snapshot get processed even if the toolbar is not visible so pending animations may run. r=kats, a=jcristau

MozReview-Commit-ID: 9iMFN2gdfKl